examples/test/testpolicy12179.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12179
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key33: value2
      key14: value4
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value9
          key42: value11
          key35: value49
      podSelector:
        matchLabels:
          key48: value31
